fix boder z-index in stacked navigation like the public login

--- a/src/herobase/static/less/style.less
+++ b/src/herobase/static/less/style.less
@@ -263,6 +263,7 @@ html, body {
   .nav-blue {
     .cut-corners-bottom(@background-blue);
     .using-horizontal-borders;
+    &:after {z-index: auto;}
     text-align: center;
     background: @background-blue;
     li > a {
